@@ -298,6 +298,9 @@ $rcmail_config['address_book_type'] = 'sql';
 // don't allow these settings to be overriden by the user
 $rcmail_config['dont_override'] = array();
 
+// allow users to add and delete sender identities
+$rcmail_config['multiple_identities'] = true;
+
 // try to load host-specific configuration
 // see http://trac.roundcube.net/wiki/Howto_Config for more details
 $rcmail_config['include_host_config'] = false;
