@@ -14,20 +14,22 @@
 
 <div id="identities-list">
 <roundcube:object name="identitiesList" id="identities-table" class="records-table" cellspacing="0" summary="Identities list" editIcon="" />
+</div>
 
-<p><roundcube:button command="add" type="input" label="newidentity" class="button" /></p>
+<p id="listbuttons">
+<roundcube:button command="add" type="input" label="newidentity" class="button" condition="config:multiple_identities:true" />
+</p>
 
 <div id="identity-details">
-<div id="identity-title"><roundcube:label name="edititem" /></div>
+<div id="identity-title"><roundcube:object name="steptitle" /></div>
 
 <div style="padding:15px;">
 <roundcube:object name="identityform" size="40" />
 
 <p><br />
-<roundcube:button command="delete" type="input" class="button" label="delete" />&nbsp;
+<roundcube:button command="delete" type="input" class="button" label="delete" condition="env:action=='edit-identity'&&config:multiple_identities:true" style="margin-right:0.5em" />
 <roundcube:button command="save" type="input" class="button mainaction" label="save" />
 </p>
-</div>
 </div>
 </div>
 
