@@ -13,8 +13,16 @@
 
 <div id="identities-list">
 <roundcube:object name="identitiesList" id="identities-table" class="records-table" cellspacing="0" summary="Identities list" editIcon="" />
+</div>
 
-<p><roundcube:button command="add" type="input" label="newidentity" class="button" /></p>
+<p id="listbuttons">
+<roundcube:button command="add" type="input" label="newidentity" class="button" condition="config:multiple_identities:true" />
+</p>
+
+<div id="identity-details">
+  <div style="margin:10px auto; text-align:center">
+  <img src="/images/rcube_watermark.png" width="245" height="245" alt="RoundCube" />
+  </div>
 </div>
 
 <roundcube:include file="/includes/settingscripts.html" />
